--- a/3d.html
+++ b/3d.html
@@ -28,7 +28,7 @@
         <div id="startmenu_area" class="notselectable" style="visibility: hidden;"><!--control-->
             <center>
                 <div class="s_buttonarea">
-                    <button onclick="startnew();startmaze()" class="s_button">start</button>
+                    <button onclick="startnew();startgame()" class="s_button">start</button>
                 </div>
             </center>
         </div>
@@ -96,15 +96,15 @@ var illumination = [0,0,1]
 var gamestarttime = Date.now()
 
 function startnew() {
-    worldsize = [10,10,5]
+    worldsize = [20,20,5]
     makeworld(worldsize[0],worldsize[1],worldsize[2]);
-    flmove = blks
+    flmove = makeflmove(blks)
     worldstart = [1,1,1];
     datato3d();
 }
 
 
-function startmaze() {
+function startgame() {
     changescene("game");
     drsel.value = "VGA";
     despl();
@@ -147,7 +147,7 @@ let plyr_stat = [
     [0,0,0], //plyr position [x,y,z] (block)
     [false,0,0], //jumping started-frame started-height
 ]
-cam_h = 0.7
+cam_h = 1.3
 
 let display_list = { // "name": [width,height,aspectraito(w),aspectraito(h),displayscale]
         "112 63": [112,63,16,9],
@@ -506,6 +506,14 @@ let keyw = {} // 通常
     keyw[68] = ()=>cam_prop[1][0]+=5;
     keyw[82] = ()=>cam_prop[1][1]+=2;
     keyw[70] = ()=>cam_prop[1][1]-=2;
+    keyw[32] = function() {
+        if (scenename=="game") {
+            plyr_stat[1][0] = true;
+        }
+        else if (scenename=="title") {
+            startnew();startgame();
+        }
+    }
     keyw[27] = function() {
         if (scenename=="game") {
             startmenu();
@@ -523,11 +531,6 @@ let keyw_s = {} // shift押し中
 }
 let keyw_f = {} // イベント取得時
 {
-    keyw_f[32] = function() {
-        if (scenename=="title") {
-            startnew();startmaze();
-        }
-    }
 }
 
 
@@ -563,46 +566,54 @@ acfr = 0;
 function action() {
     keyinput();
 
+    acfr+=0.5;
+    for (c=0;c<5;c++) {
+        bfx = plyr_stat[0][0];
+        bfy = plyr_stat[0][1];
+        bfz = plyr_stat[0][2];
+        if (!(flmove[Math.floor(bfy)]!=null&&flmove[Math.floor(bfy)][Math.floor(bfx)]!=null&&flmove[Math.floor(bfy)][Math.floor(bfx)][Math.floor(bfz-0.01)]==0) || plyr_stat[1][0]) {
+            // 床があるか ジャンプ
+            if (plyr_stat[1][0]) {
+                // ジャンプしている => ジャンプ
+                if (bff) {
+                    plyr_stat[1][1] = acfr
+                    plyr_stat[1][2] = bfz
+                    console.log("lost the floor, start to jump")
+                }
+                let nfrm = acfr - plyr_stat[1][1]
+                plyr_stat[0][2] = -(0.05*((nfrm-4.898 )**2)) +plyr_stat[1][2] + 1.2
+            }
+            else {
+                console.log("no floor")
+                // ジャンプしてない => 落下
+                if (bff) {
+                    plyr_stat[1][1] = acfr
+                    plyr_stat[1][2] = bfz
+                    console.log("lost the floor")
+                }
+                let nfrm = acfr - plyr_stat[1][1]
+                plyr_stat[0][2] = -(0.05*(nfrm**2)) +plyr_stat[1][2]
+            }
 
-    acfr++;
-
+            if ((flmove[Math.floor(bfy)]!=null&&flmove[Math.floor(bfy)][Math.floor(bfx)]!=null&&flmove[Math.floor(bfy)][Math.floor(bfx)][Math.floor(bfz)]==0)) { // 床に埋まっているか
+                plyr_stat[0][2] = Math.floor(plyr_stat[0][2])+1;
+                plyr_stat[1][0] = false;
+                console.log("end falling")
+            }
+            bff = false;
+        }
+        else {
+            // 床がある
+            if (bff==false) {
+                console.log("get on the floor")
+            }
+            bff = true;
+        }
+    }
+    
     cam_prop[0][0] = plyr_stat[0][0] // カメラの設定
     cam_prop[0][1] = plyr_stat[0][1] // カメラの設定
     cam_prop[0][2] = plyr_stat[0][2] + cam_h // カメラの設定
-
-    bfx = plyr_stat[0][0];
-    bfy = plyr_stat[0][1];
-    bfz = plyr_stat[0][2];
-    if (!(flmove[Math.floor(bfy)]!=null&&flmove[Math.floor(bfy)][Math.floor(bfx)]!=null&&flmove[Math.floor(bfy)][Math.floor(bfx)][Math.floor(bfz-0.001)]==0)) { // 床があるか
-        // 床がない
-        console.log("no floor")
-        if (plyr_stat[1][0]) {
-            // ジャンプしている => ジャンプ
-        }
-        else {
-            // ジャンプしてない => 落下
-            if (bff) {
-                plyr_stat[1][1] = acfr
-                plyr_stat[1][2] = bfz
-                console.log("lost the floor")
-            }
-            let nfrm = acfr - plyr_stat[1][1]
-            console.log(nfrm)
-            plyr_stat[0][2] = -(0.01*(nfrm**2)) +plyr_stat[1][2]
-        }
-
-        bff = false;
-    }
-    else {
-        // 床がある
-        if (bff==false) {
-            console.log("get on the floor")
-        }
-        bff = true;
-    }
-    if ((flmove[Math.floor(bfy)]!=null&&flmove[Math.floor(bfy)][Math.floor(bfx)]!=null&&flmove[Math.floor(bfy)][Math.floor(bfx)][Math.floor(bfz)]==0)) { // 床に埋まっているか
-        plyr_stat[0][2] = Math.floor(plyr_stat[0][2])+1
-    }
 }
 
 // if (flmove[Math.floor(bfy)]!=null&&flmove[Math.floor(bfy)][Math.floor(cx)]!=null&&flmove[Math.floor(bfy)][Math.floor(cx)][Math.floor(cz)]==0) {
