--- a/3d.html
+++ b/3d.html
@@ -224,16 +224,16 @@ function eachchange(arr,mx,my,mz,rz) {
     for (let i=0;i<arr.length;i++) {
         let la = arr[i]
         let li = la.map( l => ({...l}))
-        li[0][0]+=-mx
-        li[1][0]+=-mx
-        li[2][0]+=-mx
-        li[0][1]+=-my
-        li[1][1]+=-my
-        li[2][1]+=-my
-        li[0][2]+=-mz
-        li[1][2]+=-mz
-        li[2][2]+=-mz
-        narr.push(li)
+        li[0][0]+=-mx;
+        li[1][0]+=-mx;
+        li[2][0]+=-mx;
+        li[0][1]+=-my;
+        li[1][1]+=-my;
+        li[2][1]+=-my;
+        li[0][2]+=-mz;
+        li[1][2]+=-mz;
+        li[2][2]+=-mz;
+        narr.push(li);
     }
     return narr
 }
@@ -588,36 +588,31 @@ function fall() {
             if (plyr_stat[1][0]) {
                 // ジャンプしている => ジャンプ
                 if (bff) {
-                    plyr_stat[1][1] = acfr
-                    plyr_stat[1][2] = bfz
-                    console.log("lost the floor, start to jump")
+                    plyr_stat[1][1] = acfr;
+                    plyr_stat[1][2] = bfz;
                 }
-                let nfrm = acfr - plyr_stat[1][1]
-                plyr_stat[0][2] = -(0.05*((nfrm-4.898 )**2)) +plyr_stat[1][2] + 1.2
+                let nfrm = acfr - plyr_stat[1][1];
+                plyr_stat[0][2] = -(0.05*((nfrm-4.898 )**2)) +plyr_stat[1][2] + 1.2;
             }
             else {
-                console.log("no floor")
                 // ジャンプしてない => 落下
                 if (bff) {
-                    plyr_stat[1][1] = acfr
-                    plyr_stat[1][2] = bfz
-                    console.log("lost the floor")
+                    plyr_stat[1][1] = acfr;
+                    plyr_stat[1][2] = bfz;
                 }
-                let nfrm = acfr - plyr_stat[1][1]
-                plyr_stat[0][2] = -(0.05*(nfrm**2)) +plyr_stat[1][2]
+                let nfrm = acfr - plyr_stat[1][1];
+                plyr_stat[0][2] = -(0.05*(nfrm**2)) +plyr_stat[1][2];
             }
 
             if ((flmove[Math.floor(bfy)]!=null&&flmove[Math.floor(bfy)][Math.floor(bfx)]!=null&&flmove[Math.floor(bfy)][Math.floor(bfx)][Math.floor(bfz)]==0)) { // 床に埋まっているか
                 plyr_stat[0][2] = Math.floor(plyr_stat[0][2])+1;
                 plyr_stat[1][0] = false;
-                console.log("end falling")
             }
             bff = false;
         }
         else {
             // 床がある
             if (bff==false) {
-                console.log("get on the floor")
             }
             bff = true;
         }
