--- a/3d.html
+++ b/3d.html
@@ -13,12 +13,12 @@
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="3D Game">
         <meta name="twitter:description" content="3Dのブロックの世界">
-        <meta name="twitter:image:src" content="https://haruk130.github.io/maze/title.png">
+        <meta name="twitter:image:src" content="https://haruk130.github.io/tdbg/title.png">
         <meta property="og:type" content="website">
         <meta property="og:title" content="3D Block Game - haruk130">
         <meta property="og:description" content="3Dのブロックの世界">
         <meta property="og:site_name" content="HarukSite">
-        <meta property="og:image" content="https://haruk130.github.io/maze/title.png">
+        <meta property="og:image" content="https://haruk130.github.io/tdbg/title.png">
 
     </head>
     <body>
